--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html><head>
     <meta charset="utf-8">
-    <title>DUCK 2048 PARTY</title>
+    <title>POURSELEN ITEM</title>
 
     <link href="style/main.css" rel="stylesheet" type="text/css">
     <link rel="shortcut icon" href="favicon.ico">
@@ -73,7 +73,7 @@
       </div>
 
       <p class="game-explanation">
-        <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same picture touch, they <strong>merge into one!</strong> When you reach Gal Shir's duck pfp you will win!
+        <strong class="important">Abla oyun çok zor değil. yön tuşları ya da WASD ile oynayacan. aynı fotoları birleştirmeye çalışacan. Yaparsın
      
       Created by <a href="http://batuhangitmis.com">butag#2601</a>. Based on <a href="http://gabrielecirulli.com" target="_blank">2048 by Gabriele Cirulli.</a> and <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
       </p>
